domain entity rename: user -> customer
