# users/internal/infrastructure/api/dto/customerRequest.go
@@ -2,26 +2,26 @@ package dto
 
 import "meliarqsoft2/internal/domain/model"
 
-type CreateUserRequest struct {
+type CreateCustomerRequest struct {
 	Name    string `json:"name" bson:"name" binding:"required"`
 	Surname string `json:"surname" bson:"surname" binding:"required"`
 	Email   string `json:"email" bson:"email" binding:"required,email"`
 }
 
-func (dto CreateUserRequest) MapToModel() (model.User, error) {
+func (dto CreateCustomerRequest) MapToModel() (model.Customer, error) {
 	address, err := model.NewEmail(dto.Email)
 	if err != nil {
-		return model.User{}, err
+		return model.Customer{}, err
 	}
 
-	return model.User{
+	return model.Customer{
 		Name:    dto.Name,
 		Surname: dto.Surname,
 		Email:   address,
 	}, nil
 }
 
-type UpdateUserRequest struct {
+type UpdateCustomerRequest struct {
 	Name    string `json:"name" bson:"name" binding:"required"`
 	Surname string `json:"surname" bson:"surname" binding:"required"`
 	Email   string `json:"email" bson:"email" binding:"required,email"`
