# users/internal/infrastructure/api/gin/app.go
@@ -37,11 +37,11 @@ func (app MeliGinApp) Run() error {
 
 	basePath := route.Group("/api/v1")
 
-	userRoute := basePath.Group("/users")
-	userRoute.POST("", handler.NewGinUserRegister(app.events.RegisterUserEvent).Execute)
-	userRoute.GET("", handler.NewGinFindUser(app.events.FindUserEvent).Execute)
-	userRoute.PUT("/:id", handler.NewGinUpdateUser(app.events.UpdateUserEvent).Execute)
-	userRoute.DELETE("/:id", handler.NewGinUnregisterUser(app.events.UnregisterUserEvent).Execute)
+	customerRoute := basePath.Group("/customers")
+	customerRoute.POST("", handler.NewGinCustomerRegister(app.events.RegisterCustomerEvent).Execute)
+	customerRoute.GET("", handler.NewGinFindCustomer(app.events.FindCustomerEvent).Execute)
+	customerRoute.PUT("/:id", handler.NewGinUpdateCustomer(app.events.UpdateCustomerEvent).Execute)
+	customerRoute.DELETE("/:id", handler.NewGinUnregisterCustomer(app.events.UnregisterCustomerEvent).Execute)
 
 	sellerRoute := basePath.Group("/sellers")
 	sellerRoute.POST("", handler.NewGinRegisterSeller(app.events.RegisterSellerEvent).Execute)
